CSC348/Assignment4/assign4.output
Grammar

    0 $accept: start $end

    1 start: value

    2 value: NUM
    3      | LPAREN expr RPAREN

    4 expr: PLUS value value
    5     | STAR values

    6 values: value values
    7       | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
RPAREN (258) 3
LPAREN (259) 3
PLUS (260) 4
STAR (261) 5
NUM (262) 2


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
start (9)
    on left: 1, on right: 0
value (10)
    on left: 2 3, on right: 1 4 6
expr (11)
    on left: 4 5, on right: 3
values (12)
    on left: 6 7, on right: 5 6


state 0

    0 $accept: . start $end

    LPAREN  shift, and go to state 1
    NUM     shift, and go to state 2

    start  go to state 3
    value  go to state 4


state 1

    3 value: LPAREN . expr RPAREN

    PLUS  shift, and go to state 5
    STAR  shift, and go to state 6

    expr  go to state 7


state 2

    2 value: NUM .

    $default  reduce using rule 2 (value)


state 3

    0 $accept: start . $end

    $end  shift, and go to state 8


state 4

    1 start: value .

    $default  reduce using rule 1 (start)


state 5

    4 expr: PLUS . value value

    LPAREN  shift, and go to state 1
    NUM     shift, and go to state 2

    value  go to state 9


state 6

    5 expr: STAR . values

    LPAREN  shift, and go to state 1
    NUM     shift, and go to state 2

    $default  reduce using rule 7 (values)

    value   go to state 10
    values  go to state 11


state 7

    3 value: LPAREN expr . RPAREN

    RPAREN  shift, and go to state 12


state 8

    0 $accept: start $end .

    $default  accept


state 9

    4 expr: PLUS value . value

    LPAREN  shift, and go to state 1
    NUM     shift, and go to state 2

    value  go to state 13


state 10

    6 values: value . values

    LPAREN  shift, and go to state 1
    NUM     shift, and go to state 2

    $default  reduce using rule 7 (values)

    value   go to state 10
    values  go to state 14


state 11

    5 expr: STAR values .

    $default  reduce using rule 5 (expr)


state 12

    3 value: LPAREN expr RPAREN .

    $default  reduce using rule 3 (value)


state 13

    4 expr: PLUS value value .

    $default  reduce using rule 4 (expr)


state 14

    6 values: value values .

    $default  reduce using rule 6 (values)
